set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++ -pthread -Wl,--whole-archive -lrt -Wl,--no-whole-archive")
if(CMAKE_SYSTEM_PROCESSOR STREQUAL "ppc64le")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lgcc_s")
endif()
add_definitions(-O0 -g ${MALLOC_DEFINITIONS})
link_libraries(pico_core_static gtest gtest_main)
add_executable(channel_test channel_test.cpp)
add_executable(archive_test archive_test.cpp)
add_executable(rpc_service_test rpc_service_test.cpp)
add_executable(format_string_test format_string_test.cpp)
add_executable(file_line_reader_test file_line_reader_test.cpp)
add_executable(async_return_test async_return_test.cpp)
add_executable(channel_replicator_test channel_replicator_test.cpp)
add_executable(pico_var_arg_call_test pico_var_arg_call_test.cpp)
add_executable(vector_move_append_test vector_move_append_test.cpp)
add_executable(base64_test base64_test.cpp)
add_executable(string_utility_test string_utility_test.cpp)
add_executable(pico_lexical_cast_test pico_lexical_cast_test.cpp)
add_executable(pico_json_node_test pico_json_node_test.cpp)
add_executable(hash_table_test hash_table_test.cpp)
add_executable(common_test common_test.cpp)
add_executable(compress_test compress_test.cpp)
add_executable(pico_log_test pico_log_test.cpp)
add_executable(uri_code_test uri_code_test.cpp)
add_executable(pico_memory_test memory_test.cpp)
add_executable(monitor_test monitor_test.cpp)
add_executable(tcp_master_client_test tcp_master_client_test.cpp)
add_executable(zk_master_client_test zk_master_client_test.cpp) 
add_executable(rpc_channel_test rpc_channel_test.cpp)
add_executable(lazy_vector_test lazy_vector_test.cpp)
add_executable(lazy_archive_test lazy_archive_test.cpp)
add_executable(lazy_archive_rpc_test lazy_archive_rpc_test.cpp)
add_executable(rpc_test rpc_test.cpp)
add_executable(rpc_multiprocess_test rpc_multiprocess_test.cpp)
add_executable(rpc_connect_test rpc_connect_test.cpp)
add_executable(uri_config_test uri_config_test.cpp)
add_executable(shell_utility_test shell_utility_test.cpp)
add_executable(factory_test factory_test.cpp)
add_executable(memory_storage_test memory_storage_test.cpp)

add_executable(accumulator_test accumulator_test.cpp)
add_executable(auto_timer_test auto_timer_test.cpp)
add_executable(lrucache_test lrucache_test.cpp)

if (USE_RDMA)
    add_executable(rpc_rdma_test rpc_rdma_test.cpp)
endif()
